bk_ida/gccida/c1/find_reloads_subreg_address
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_subreg_address/src/reload.c:6218:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_subreg_address/src/reload.c:6226:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v13; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_subreg_address/src/reload.c:6227:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v14; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_subreg_address/src/reload.c:6257:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)memrefloc + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_subreg_address/src/reload.c:6265:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( replace_reloads && recog_data_0.operand[opnum] != x ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_subreg_address/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_subreg_address/src/obj/reload.o] Error 1
